Add more sections to landing page.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,4 +20,9 @@
     {{ end }}
   {{ end }}
 
+<h2>Next Performance/Event</h2>
+Check back in for news on upcoming events and performances.
+
+<h2>In The News</h2>
+
 {{ partial "footer" .}}
