--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,5 +24,6 @@
 Check back in for news on upcoming events and performances.
 
 <h2>In The News</h2>
+<a href="https://www.delawareonline.com/story/life/2014/02/26/crossroads-a-classical-revolution-in-delaware/5845583/">Crossroads: A Classical Revolution in Delaware</a>
 
 {{ partial "footer" .}}
