Update secondary color.

--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -1,5 +1,5 @@
 $primary-color: #d4cafc
-$secondary-color: #FD3519
+$secondary-color: #d4cafc
 $dark-blue: #301934
 
 $grey-900: hsl(210, 15%, 25%) // #364049
