--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,8 +1,7 @@
 {{ partial "header" .}}
 
 <h1>{{ .Title }}</h1>
-
-{{ with .Params.featured_image }}<img src="{{ . }}">{{ end }}
+{{ partial "post/information" . }}
 
 {{ .Content }}
 
